<resources>
    <string name="app_name">KODE Employees</string>

    <string name="users_screen_state_error_title">Какой-то сверхразум все сломал</string>
    <string name="users_screen_state_error_msg">Постараемся быстро починить</string>
    <string name="users_screen_state_btn_retry">Попробовать снова</string>
    <string name="users_screen_state_empty_list_title">В выбранном департаменте нет работников</string>
    <string name="users_screen_state_empty_list_msg">Загляните пока в другой департамент</string>
    <string name="users_screen_state_user_not_found_title">Мы никого не нашли</string>
    <string name="users_screen_state_user_not_found_msg">Попробуй скорректировать запрос</string>

    <string name="department_title_all">Все</string>
    <string name="department_title_android">Android</string>
    <string name="department_title_ios">iOS</string>
    <string name="department_title_design">Дизайн</string>
    <string name="department_title_management">Менеджмент</string>
    <string name="department_title_qa">QA</string>
    <string name="department_title_back_office">Бэк-офис</string>
    <string name="department_title_frontend">Frontend</string>
    <string name="department_title_hr">HR</string>
    <string name="department_title_pr">PR</string>
    <string name="department_title_backend">Backend</string>
    <string name="department_title_support">Техподдержка</string>
    <string name="department_title_analytics">Аналитика</string>
    <string name="sort_users_screen_title">Сортировка</string>
    <string name="sort_users_screen_by_alphabet">По алфавиту</string>
    <string name="sort_users_screen_by_birthdate">По дню рождения</string>
    <string name="users_screen_edit_text_hint">Введи имя, тег, номер телефона…</string>
    <string name="users_screen_cancel_btn">Отмена</string>

    <string name="user_detail_screen_empty_phone">Нет номера телефона</string>
    <string name="user_detail_screen_empty_profession">Нет данных о профессии</string>
    <string name="user_detail_screen_empty_name">Нет данных об имени пользователя</string>

    <string name="test_users_fragment_title_user_not_found">Search empty user</string>
    <string name="test_users_fragment_header_title_next_year">2024</string>

</resources>