<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.screens.users.UsersFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/vAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vSearchFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vSearchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/vTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/vSwipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vAppBarLayout">

        <com.skydoves.androidveil.VeilRecyclerFrameView
            android:id="@+id/vRecyclerUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:veilFrame_baseAlpha="0.6"
            app:veilFrame_highlightAlpha="1.0"
            app:veilFrame_highlightColor="@color/shimmer_highlight_0"
            app:veilFrame_layout="@layout/view_veil_user_item"
            app:veilFrame_radius="360dp"
            app:veilFrame_shimmerEnable="true"
            app:veilFrame_veiled="true" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/vErrorLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vAppBarLayout">

        <ImageView
            android:id="@+id/vErrorImg"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:src="@drawable/img_state_error"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vErrorTitle"
            style="@style/Inter.StateHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|top"
            android:text="@string/users_screen_state_error_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vErrorMsg"
            style="@style/Inter.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center|top"
            android:text="@string/users_screen_state_error_msg"
            android:textColor="@color/gray1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vRefreshTxtBtn"
            style="@style/Inter.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|top"
            android:text="@string/users_screen_state_btn_retry"
            android:textColor="@color/purple1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>